--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>АХХХХХ</title>
+    <title>Одинокая картинка</title>
     <style>
         body {
             margin: 0;
@@ -12,18 +12,50 @@
             align-items: center;
             height: 100vh;
             background-color: black;
+            flex-direction: column;
         }
         img {
             max-width: 100%;
-            max-height: 100%;
+            max-height: 80%;
+        }
+        button {
+            margin-top: 20px;
+            padding: 10px 20px;
+            font-size: 16px;
+            cursor: pointer;
         }
     </style>
 </head>
 <body>
-    <audio autoplay>
+    <audio id="myAudio">
         <source src="sound.mp3" type="audio/mpeg">
         Ваш браузер не поддерживает аудио.
     </audio>
-    <img src="image.jpeg" alt="Картинка">
+
+    <img src="image.jpg" alt="Картинка">
+    <button id="playButton">Включить звук</button>
+
+    <script>
+        document.addEventListener("DOMContentLoaded", function() {
+            let audio = document.getElementById("myAudio");
+            let playButton = document.getElementById("playButton");
+
+            // Попытка запустить звук без взаимодействия (может не сработать)
+            let playPromise = audio.play();
+            if (playPromise !== undefined) {
+                playPromise.then(() => {
+                    playButton.style.display = "none"; // Скрываем кнопку, если звук запустился
+                }).catch(() => {
+                    playButton.style.display = "block"; // Показываем кнопку, если звук не запустился
+                });
+            }
+
+            // Если звук не запустился, кнопка включит его
+            playButton.addEventListener("click", function() {
+                audio.play();
+                playButton.style.display = "none"; // Скрываем кнопку после клика
+            });
+        });
+    </script>
 </body>
 </html>
