--- a/index.html
+++ b/index.html
@@ -13,16 +13,20 @@
             height: 100vh;
             background-color: black;
             flex-direction: column;
+            position: relative;
         }
-        img {
-            max-width: 100%;
-            max-height: 80%;
-        }
-        button {
-            margin-top: 20px;
-            padding: 10px 20px;
-            font-size: 16px;
+        #playButton {
+            position: absolute;
+            width: 100%;
+            height: 100%;
+            background: url('image.jpeg') no-repeat center center;
+            background-size: contain;
+            border: none;
             cursor: pointer;
+            padding: 0;
+        }
+        #playButton.hidden {
+            display: none;
         }
     </style>
 </head>
@@ -32,28 +36,27 @@
         Ваш браузер не поддерживает аудио.
     </audio>
 
-    <img src="image.jpg" alt="Картинка">
-    <button id="playButton">Включить звук</button>
+    <button id="playButton"></button>
 
     <script>
         document.addEventListener("DOMContentLoaded", function() {
             let audio = document.getElementById("myAudio");
             let playButton = document.getElementById("playButton");
 
-            // Попытка запустить звук без взаимодействия (может не сработать)
+            // Попытка автозапуска звука
             let playPromise = audio.play();
             if (playPromise !== undefined) {
                 playPromise.then(() => {
-                    playButton.style.display = "none"; // Скрываем кнопку, если звук запустился
+                    playButton.classList.add("hidden"); // Если звук запустился, скрываем кнопку
                 }).catch(() => {
-                    playButton.style.display = "block"; // Показываем кнопку, если звук не запустился
+                    playButton.classList.remove("hidden"); // Показываем кнопку, если звук не запустился
                 });
             }
 
-            // Если звук не запустился, кнопка включит его
+            // Запуск звука при нажатии на кнопку-картинку
             playButton.addEventListener("click", function() {
                 audio.play();
-                playButton.style.display = "none"; // Скрываем кнопку после клика
+                playButton.classList.add("hidden"); // Скрываем кнопку после клика
             });
         });
     </script>
