--- a/index.html
+++ b/index.html
@@ -15,18 +15,17 @@
             flex-direction: column;
             position: relative;
         }
+        img {
+            max-width: 100%;
+            max-height: 100%;
+        }
         #playButton {
             position: absolute;
             width: 100%;
             height: 100%;
-            background: url('image.jpeg') no-repeat center center;
-            background-size: contain;
+            background: transparent;
             border: none;
             cursor: pointer;
-            padding: 0;
-        }
-        #playButton.hidden {
-            display: none;
         }
     </style>
 </head>
@@ -36,6 +35,7 @@
         Ваш браузер не поддерживает аудио.
     </audio>
 
+    <img src="image.jpeg" alt="Картинка">
     <button id="playButton"></button>
 
     <script>
@@ -46,17 +46,15 @@
             // Попытка автозапуска звука
             let playPromise = audio.play();
             if (playPromise !== undefined) {
-                playPromise.then(() => {
-                    playButton.classList.add("hidden"); // Если звук запустился, скрываем кнопку
-                }).catch(() => {
-                    playButton.classList.remove("hidden"); // Показываем кнопку, если звук не запустился
+                playPromise.catch(() => {
+                    // Если звук не запустился, оставить кнопку активной
+                    playButton.style.display = "block";
                 });
             }
 
-            // Запуск звука при нажатии на кнопку-картинку
+            // Запуск звука при нажатии на кнопку
             playButton.addEventListener("click", function() {
                 audio.play();
-                playButton.classList.add("hidden"); // Скрываем кнопку после клика
             });
         });
     </script>
