--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
             let image = document.getElementById("randomImage");
 
             // Массив с названиями картинок
-            let images = ["image1.jpeg", "image2.jpeg", "image3.jpeg"];
+            let images = ["image.jpeg", "image2.webp", "image3.jpeg"];
             
             // Выбор случайной картинки
             let randomIndex = Math.floor(Math.random() * images.length);
